# Verified-Telemetry-FreeRTOS-Sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SUPPORT.md
.github/scripts/: fetch_freertos.ps1  fetch_freertos.sh
PnPModel/: device.json  gsg.json
cmake/common/: utilities.cmake
demos/: CMakeLists.txt
demos/projects/ESPRESSIF/esp32/: README.md  sdkconfig  sdkconfig.old
demos/projects/ESPRESSIF/esp32/components/mcp320x/include/: mcp320x.h
demos/projects/ESPRESSIF/esp32/components/mcp320x/src/: mcp320x.c
demos/projects/ESPRESSIF/esp32/components/sample-azure-iot/: CMakeLists.txt
demos/projects/ESPRESSIF/esp32/main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c
demos/projects/ESPRESSIF/esp32/verified-telemetry/: sample_pnp_device_component.c  sample_pnp_device_component.h  sample_vt_device_driver.c  sample_vt_device_driver.h
demos/projects/ST/b-l475e-iot01a/: CMakeLists.txt  README.md  gcc_flags.cmake  main.c  main.h
demos/projects/ST/b-l475e-iot01a/config/: FreeRTOSConfig.h  demo_config.h
demos/projects/ST/b-l475e-iot01a/st_code/: sample_pnp_device_component.c  sample_pnp_device_component.h  sample_vt_device_driver.c  sample_vt_device_driver.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c
demos/sample_azure_iot_pnp/: README.md  sample_azure_iot_pnp.c  sample_azure_iot_pnp.c.bak  sample_freertos_verified_telemetry_init.c  sample_freertos_verified_telemetry_init.h  sample_pnp_device_component.c  sample_pnp_device_component.h  sample_vt_device_driver.c  sample_vt_device_driver.h
libs/Verified-Telemetry/: CMakeLists.txt  LICENSE.txt
libs/Verified-Telemetry/inc/core/: vt_defs.h
libs/Verified-Telemetry/src/middleware/: FreeRTOS_vt_fallcurve_component.c
libs/azure-iot-middleware-freertos/tests/config_files/: core_mqtt_config.h
libs/azure-iot-middleware-freertos/tests/e2e/: Readme.md
libs/azure-iot-middleware-freertos/tests/e2e/device/: e2e_device_commands.c  e2e_device_process_commands.h  e2e_device_task.c  main.c  mbedtls_freertos_port.c
libs/azure-iot-middleware-freertos/tests/e2e/service/: package.json  tsconfig.json
libs/azure-iot-middleware-freertos/tests/e2e/service/common/: e2e_test_core.ts
libs/azure-iot-middleware-freertos/tests/e2e/service/iothub_client/: e2e_iot_hub_client_test.ts
libs/azure-iot-middleware-freertos/tests/e2e/service/provisioning_client/: e2e_iot_provisioning_client_test.ts
